# YAChat

./: .gitignore  CMakeLists.txt  README.md  main.cpp  xmake.lua
client/: client.cpp
server/: CMakeLists.txt  interface.h  server.cpp  server.h  service.h
server/apis/: api.cpp  api.h  handler.cpp  handler.h
server/database/: conn.h
server/entities/: chat.cpp  chat.h  user.cpp  user.h
